src/modules/ngx-daterange/src/components/datepicker/date-range-picker.component.scss
.daterangepicker-wrapper {
  position: relative;
  border: none;

  .daterangepicker {
    background: #fff;
    border-radius: 9px;
    box-shadow: 0px 0px 10px 0px rgba(129, 139, 144, 0.5); // 50% #818B90
    font-family: "Roboto", Helvetica, Arial, sans-serif;
    overflow: auto;
    position: absolute;
    top: 44px;
    z-index: 3000;

    @media screen and (min-width: 576px) {
      min-width: 600px;
    }

    &.tooltip-chevron {
      &::before, &::after {
        content: '';
        height: 0px;
        width: 0px;
        border: 10px solid transparent;
        position: absolute;
        border-bottom-color: #6E777C;
        top: -18px;
      }
    }

    &.open-left {
      left: 0;

      &.tooltip-chevron {
        &::before {
          left: 10px;
        }

        &::after {
          display: none;
        }
      }
    }

    &.open-center {
      right: -50%;

      &.tooltip-chevron {
        &::before {
          display: none;
        }

        &::after {
          right: -50%;
        }
      }
    }

    &.open-right {
      right: 0;

      &.tooltip-chevron {
        &::before {
          display: none;
        }

        &::after {
          right: 10px;
        }
      }
    }

    &.always-open{
      top: 0;
      box-shadow: none;
    }

    &.is-chrome {
      .form-inputs {
        .input-with-icon {
          span {
            position: relative;
            top: 1px;
          }
        }
      }
    }

    .ranges {
      margin-top: 1rem;
    }

    .form-inputs {
      background-color: #6E777C;
      border-top-left-radius: 8px;
      border-top-right-radius: 8px;
      color: #fff;
      font-size: 16px;

      > .col {
        padding: 0.5rem 15px;
        min-width: 270px; // allows for "From:" and "To:" text. Prevents shift in table cell widths when date is selected
      }

      .input-with-icon {
        display: flex;
        align-content: flex-start;
        align-items: center !important;

        i {
          &.material-icons {
            top: 0;
          }

          margin-right: 0.5rem;
        }

        span {
          line-height: 1;
        }

      }

      .form-control {
        background: none;
        border: 0 none;
        color: #fff;
        display: inline-block;
        padding: 0;
        width: 150px; // allows for "From:" and "To:" text. Prevents shift in table cell widths when date is selected

        &::placeholder  {
          color: #fff;
        }
      }
    }

    .form-inputs, .row-calendars {
      > div:nth-child(2) {
        border-left: solid 2px #C6D1D6;
      }
    }
  }

  i {
    &.material-icons {
      position: relative;
      top: 2px;
    }
  }
}

// @media (max-width: 550px) {
//   .ranges > div {
//     display: none;
//   }
// }

// .daterangepicker .time-picker span {
//   padding-left: 4px;
//   padding-right: 4px;
// }

// .daterangepicker .time-picker .time-breadcrumb {
//   position: relative;
//   top: 22px;
//   font-weight: bolder;
//   font-size: 0.8em;
// }

// .daterangepicker .table > thead > tr > th {
//   vertical-align: middle;
// }

